--- a/README.html
+++ b/README.html
@@ -1,4 +1,6 @@
-<h1>Lazy Load for Videos</h1>
+<h1>Lazy Load for Videos by <a href="http://kevinw.de">Kevin Weber</a></h1>
 
 <p>This plugin improves page load times and increases your Google PageSpeed Score. It replaces embedded Youtube and Vimeo videos with a clickable preview image.
 By loading the videos only when the user clicks on the preview image – using jQuery –, no unnecessary JavaScript is loaded. Especially on sites with many embedded videos this will make your visitors happy.</p>
+
+<p><a href="http://wordpress.org/plugins/lazy-load-for-videos/">Download Lazy Load for Videos from WordPress.org</a></p>
