--- a/README.html
+++ b/README.html
@@ -3,4 +3,4 @@
 <p>This plugin improves page load times and increases your Google PageSpeed Score. It replaces embedded Youtube and Vimeo videos with a clickable preview image.
 By loading the videos only when the user clicks on the preview image – using jQuery –, no unnecessary JavaScript is loaded. Especially on sites with many embedded videos this will make your visitors happy.</p>
 
-<p><a href="http://kevinw.de/lazyloadvideos">Get more information on the developer&rsquo;s website</a></p>
+<p><a href="http://kevinw.de/lazy-load-videos/">Get more information on the developer&rsquo;s website</a></p>
