Change links on backend from http to https

--- a/README.html
+++ b/README.html
@@ -1,6 +1,6 @@
-<h1>Lazy Load for Videos by <a href="http://kevinw.de">Kevin Weber</a></h1>
+<h1>Lazy Load for Videos by <a href="//kevinw.de">Kevin Weber</a></h1>
 
 <p>This plugin improves page load times and increases your Google PageSpeed Score. It replaces embedded Youtube and Vimeo videos with a clickable preview image.
 By loading the videos only when the user clicks on the preview image – using jQuery –, no unnecessary JavaScript is loaded. Especially on sites with many embedded videos this will make your visitors happy.</p>
 
-<p><a href="http://kevinw.de/lazy-load-videos/">Download link and more information on the developer&rsquo;s website</a></p>
+<p><a href="//kevinw.de/lazy-load-videos/">Download link and more information on the developer&rsquo;s website</a></p>
